# neural

./: Cargo.toml  README.md  flake.nix
src/: data.rs  inference.rs  main.rs  model.rs  training.rs
