[package]
authors = ["Big Smarty"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "neural"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.12.0", features = ["train", "wgpu", "dataset", "vision"] }
clap = {version = "4.4", features = ["cargo"]}
image = "0.24.8"
